# ESPRecovery

./: CMakeLists.txt  README.md  ota_updater.sh  partitions.csv  sdkconfig copy.defaults  sdkconfig.defaults
bootloader_components/bootloader_hooks/: CMakeLists.txt  bootloader_hooks.c
components/dns_server/: dns_server.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c  root.html
